add_library (US_PP
PackGftoc.cpp
GetPhaseSpecies.cpp
InitClebschGordan.cpp
Ylm.cpp
CubicHarmonic.cpp
InitLocalizedWeight.cpp
InitDelocalizedWeight.cpp
InitOrbital.cpp
InitDelocalizedOrbital.cpp
InitWeightOne.cpp
InitDelocalizedObject.cpp
#InitLocalForward.cpp
InitLocalBackward.cpp
#PackFine2Rhogrid.cpp
FindFftwPhaseLocalpp.cpp
Radius2grid.cpp
FindPhase.cpp
FindPhaseKpoint.cpp
Atomic.cpp
Atomic_Cbindings.cpp
InitPseudo.cpp
InitQfunct.cpp
InitLocalObject.cpp
US_Cbindings.cpp
init_efield.c
weight_shift_center.c
ylmr2.c
linint.c
get_QnmL.c
radiff.c
ylm.c
GetQI.cpp
get_qqq.c
radint1.c
get_ddd.c
radint.c
)
include_directories("${RMG_SOURCE_DIR}/Headers/")

