add_library (NEGF_Common
#SetEnergyWeight.cpp
#SetEnergyWeightNoneq.cpp
matrix_inverse_blocknm_Gauss.c
matrix_inverse_rowcol.c
zgesv_driver.c
matrix_inverse_Gauss.c
green_lead.c
host_device_wraper.c
blas_driver.c
zgemm_driver.c
matrix_inverse_driver.c
allocate_matrix_LCR.c
allocate_matrix_soft.c
apply_potential_drop.c
charge_density_matrix_p.c
diff_hx_interpolation.c
distribute_to_X_soft.c
distri_fermi.c
find_fermi.c
find_new_energy_point.c
find_new_energy_point_sharp_peak.c
gauleg.c
get_3Ddos.c
get_cond_frommatrix.c
get_cond_frommatrix_kyz.c
get_ddd_update.c
get_dos.c
get_Hij_update.c
get_inverse_block.c
get_inverse_block_p.c
get_ion_orbit_overlap_loc.c
get_line.c
get_new_rho_local.c
get_new_rho_soft.c
get_state_to_proc.c
global_to_distribute3.c
H01_to_HCL.c
init_comp.c
init_ext.c
init_gpu.c
init_loc_xyz.c
init_pe_on.c
init_psp_soft.c
InitNegf.cpp
init_state_distribute.c
interpolation_orbit.c
ion_partial_Hij_and_Sij.c
is_vloc_state_overlap.c
kpoints.c
lead_bandstructure.c
lead_mat_distribute.c
local_to_tri.c
map_orbital_to_process.c
matrix_inverse_anyprobe.c
matrix_inverse_blocknm.c
matrix_inverse_p.c
matrix_kpoint.c
matrix_kpoint_center.c
green_kpoint_phase.c
matrix_kpoint_lead.c
min_distance_index.c
modify_rho.c
multi_GHG_munu.c
nlforce.c
nlforce_par_D.c
nlforce_par_Q.c
nlforce_partial_H_part2.c
ortho_norm_local.c
partial_vloc.c
partial_vlocpsi.c
plane_average_rho.c
pmo_init.c
pmo_trace.c
pmo_unitary_matrix.c
pmo_unitary_matrix_double.c
print_status.c
QuenchNegf.cpp
read_cond_input.c
read_LCR.c
read_lead_matrix.c
read_matrix_pp.c
read_orbital.c
read_potrho.c
read_potrho_LCR.c
read_rho_and_pot.c
read_trans.c
rho_munu.c
rho_nm_mat.c
rmg_timings.c
Run.cpp
scale_orbital.c
scf.c
setback_corner_matrix_H.c
setback_corner_matrix_S.c
set_energy_weight.c
set_energy_weight_ne.c
Sgreen_c.c
Sgreen_c_noneq_p.c
Sgreen_cond_p.c
Sgreen_c_p.c
Sgreen_semi_infinite_p.c
sigma_all_energy_point.c
sigma_one_energy_point.c
Sigma_p.c
spline.c
splint.c
split_matrix_center.c
split_matrix_lead.c
tools_submat.c
trace_AB_tri.c
tri_to_local.c
tri_to_row.c
tri_to_whole_complex.c
tri_to_whole_complex_p.c
whole_to_tri_complex.c
row_to_tri_p.c
whole_to_tri_real.c
whole_to_tri_update.c
write_data_negf.c
write_data_lead.c
write_global_data.c
writeout_matrix_p.c
X_to_distribute_soft.c
zero_lead_image.c
RmgThread.cpp
get_tf_rho.c
)
include_directories("${RMG_SOURCE_DIR}/NEGF/Headers/")
include_directories("${RMG_BINARY_DIR}/NEGF/Headers/")
