add_library (ON_Common
 add_orbit_to_wave.c
 allocate_matrix.c
 app_cil_orbital6.c
 app_cil_orbital.c
 change_states_crds.c
 CMakeLists.txt
 diag_eig_matrix.c
 fastrlx.c
 fill.c
 genvpsi.c
 get_cholesky_real.c
 get_dm_diag_p.c
 get_dnmpsi.c
 get_gamma_precond.c
 get_invmat.c
 get_mat_Omega.c
 get_mehr.c
 get_new_rho.c
 get_orbit_center.c
 get_qnmpsi.c
 get_state_to_proc.c
 get_sum_eig.c
 get_te.c
 get_wave.c
 init.c
 init_kbr.c
 init_pe_on.c
 init_rho_atom.c
 init_states.c
 init_wf_atom.c
 init_wf.c
 init_wf_gaussian.c
 interpolate_atom_density.c
 kain.c
 matrix_and_diag.c
 md.c
 md_fastrelax.c
 mg_eig.c
 mgrid_solv_local.c
 movie.c
 nlforce.c
 nlforce_par_omega.c
 normalize_orbits.c
ortho_norm_local.c
 precond.c
 precond_mg.c
 print_status.c
 print_wave.c
 pulay.c
 pulay_weighted.c
 qnm_beta_betapsi.c
 quench.c
 rand0.c
 read_data.c
 real_max_all.c
 rmg_timings.c
 run.c
 scf.c
 sd.c
 theta_phi_new.c
 tools_submat.c
 update_orbit_centers.c
 write_data.c
 write_eigs.c
 write_states_info.c
 xbsmovie.c
 RmgThread.cpp
)
include_directories("${RMG_SOURCE_DIR}/ON/Headers/")
include_directories("${RMG_BINARY_DIR}/ON/Headers/")
