add_library (ON_Common
 MyCpdgemr2d.cpp
 ReadDataFromRMG.cpp
 VhcorrDipoleInit.cpp
 VhcorrPeriodicPart.cpp
 DipoleCorrection.cpp
 UpdatePot.cpp
 OrbitalOptimize.cpp
 DiagScalapack.cpp
 DiagElemental.cpp
 ReadPermInfo.cpp
 WritePermInfo.cpp
 PermAtoms.cpp
 GetPermStateIndex.cpp
 BandwidthReduction.cpp
 gw_correction_matrix.c
 write_restart.c
 init_wf_lcao.c
 add_orbit_to_wave.c
 allocate_matrix.c
 app_cil_orbital6.c
 app_cil_orbital.c
 change_states_crds.c
 CMakeLists.txt
 diag_eig_matrix.c
 genvpsi.c
 get_cholesky_real.c
 get_dm_diag_p.c
 get_gamma_precond.c
 get_invmat.c
 get_mat_Omega.c
 get_orbit_center.c
 get_state_to_proc.c
 get_sum_eig.c
 get_wave.c
 InitON.cpp
 init_pe_on.c
 init_rho_atom.c
 init_wf_atom.c
 init_wf.c
 init_wf_gaussian.c
 interpolate_atom_density.c
 Kain.cpp
 matrix_and_diag.c
 md_fastrelax.c
 mgrid_solv_local.c
 MgridSolvLocal.cpp
 movie.c
 nlforce.c
 nlforce_par_omega.c
 normalize_orbits.c
 ortho_norm_local.c
 Precond.cpp
 PrecondMg.cpp
 PrecondMg1.cpp
 print_status.c
 print_wave.c
 Pulay.cpp
 PulayWeighted.cpp
 qnm_beta_betapsi.c
 quench.c
 rand0.c
 read_data.c
 real_max_all.c
 rmg_timings.c
 Scf_on.cpp
 sd.c
 tools_submat.c
 update_orbit_centers.c
 write_data.c
 write_eigs.c
 write_states_info.c
 xbsmovie.c
 ZeroBoundary.cpp
 ThetaPhi.cpp
 ThetaPhiBlock.cpp
)
include_directories("${RMG_SOURCE_DIR}/ON/Headers/")
include_directories("${RMG_BINARY_DIR}/ON/Headers/")
