add_library (ON_NEGF_share
ReadOrbitals.cpp
allocate_masks.c
allocate_psi.c
allocate_states.c
app10_del2.c
app_grad6.c
app_mask.c
assign_weight_on.c
density_orbit_X_orbit.c
distribute_to_global.c
dot_product_orbit_orbit.c
dot_product_orbit_nl.c
duplicate_states_info.c
fill_orbit_borders4.c
genvlocpsi.c
get_all_kbpsi.c
get_all_partial_kbpsi.c
get_matB_qnm.c
get_HS.c
get_Hvnlij.c
get_ion_orbit_overlap_nl.c
get_nlop.c
get_orbit_overlap_region.c
get_start.c
global_sums_int.c
global_to_distribute.c
init_comm.c
init_comm_res.c
init_dimension.c
init_nl_xyz.c
init_nonlocal_comm.c
init_parameter.c
init_state_size.c
int_max_all.c
is_state_overlap.c
make_mask_grid_state.c
minimage1.c
nlforce_par_rho.c
open_wave_file.c
orbit_dot_orbit.c
partial_Mat_nm_R.c
print_matrix.c
pulay_rho_on.c
rho_augmented.c
rho_Qnm_mat.c
state_corner_xyz.c
symmetry.c
write_force.c
write_header.c
write_pos.c
write_rho_x.c
write_rho_y.c
write_rho_z.c
xyz2pe.c
)
include_directories("${RMG_SOURCE_DIR}/ON/Headers/")
include_directories("${RMG_BINARY_DIR}/ON/Headers/")
