add_library (ON_NEGF_share
WriteXyz.cpp
ApplyHphi.cpp
mat_local_to_glob.cpp
MyCpdgemr2d.cpp
LdaU_on.cpp
LO_x_LO.cpp
LocalObject.cpp
OrbitalComm.cpp
DistributeTasks.cpp
RmgThread.cpp
make_mask_grid_state.cpp
GetNewRho_proj.cpp
FillOrbitalBorders.cpp
KbpsiUpdate.cpp
RhoQnmMat.cpp
RhoAugmented_proj.cpp
RhoAugmented.cpp
KbpsiComm.cpp
InitNonlocalComm.cpp
GetHS.cpp
GetHvnlij.cpp
GetHvnlij_proj.cpp
ReadOrbitals.cpp
allocate_masks.cpp
AllocatePsi.cpp
allocate_states.cpp
app_grad6.cpp
app_mask.cpp
assign_weight_on.cpp
density_orbit_X_orbit.cpp
DistributeToGlobal.cpp
DotProductOrbitOrbit.cpp
DotProductOrbitNl.cpp
duplicate_states_info.cpp
fill_orbit_borders4.cpp
GenVxPsi.cpp
GetAllKbpsi.cpp
get_all_partial_kbpsi.cpp
get_ion_orbit_overlap_nl.cpp
GetNlop_on.cpp
GetOrbitalPairs.cpp
get_orbit_overlap_region.cpp
get_start.cpp
global_sums_int.cpp
global_to_distribute.cpp
init_comm.cpp
init_comm_res.cpp
init_dimension.cpp
init_nl_xyz.cpp
init_nonlocal_comm.cpp
init_parameter.cpp
init_state_size.cpp
int_max_all.cpp
is_state_overlap.cpp
minimage1.cpp
nlforce_par_rho.cpp
open_wave_file.cpp
OrbitDotOrbit.cpp
OrbitDotOrbitBlock.cpp
partial_Mat_nm_R.cpp
print_matrix.cpp
rho_Qnm_mat.cpp
state_corner_xyz.cpp
write_force.cpp
write_pos.cpp
write_rho_x.cpp
write_rho_y.cpp
write_rho_z.cpp
ThetaPhi.cpp
ThetaPhiBlock.cpp
xyz2pe.cpp
write_TFions.cpp
)
include_directories("${RMG_SOURCE_DIR}/ON/Headers/")
include_directories("${RMG_BINARY_DIR}/ON/Headers/")
