add_library (RMG_Common
BroydenPotential.cpp
app_smooth_test.cpp
DavPreconditioner.cpp
ApplyHamiltonian.cpp
ApplyHamiltonianBlock.cpp 
Davidson.cpp
Diagonals.cpp
MgridSubspace.cpp
MolecularDynamics.cpp
GetAugRho.cpp
MixRho.cpp
WriteData.cpp
WriteBGW.cpp
MixBetaxpsi1.cpp
WriteRestart.cpp
LcaoGetAwave.cpp
LcaoGetPsi.cpp
ReadData.cpp
OutputBandPlot.cpp
AppCirDriverBeta.cpp
AssignWeight.cpp
GetWeight.cpp
GetNlop.cpp
ReinitIonicPotentials.cpp
transition_rmg.cpp
PotentialAcceleration.cpp
GetNewRho.cpp
Betaxpsi.cpp
Init.cpp
Main.cpp
AppNls.cpp
Kpoint.cpp
State.cpp
Quench.cpp
Relax.cpp
RmgThread.cpp
OutputEigenvalues.cpp
Scf.cpp
pack_stop_axpy.cpp
genvpsi.cpp
MgEigState.cpp
write_occ.c
GetGamma.cpp
fastrelax.c
scalapack_tools.c
lbfgs_init.c
Nlforce.cpp
pack_rho_ctof.c
write_force.c
getpoi_bc.c
nlforce_par_gamma.c
app_smooth1.cpp
rand0.c
get_extrapolation_constants.c
output_wave.c
write_header.c
#get_pdos.c
BandStructure.cpp
wvfn_residual.c
#init_img_topo.c
#mulliken.c
write_avgd.c
bsplines.c
claim_ion.c
debug_write_rho_z.c
write_pdb.c
nlforce_par_omega.c
real_min_all.c
PartialBetaxpsi.cpp
neb_relax.c
app_smooth.cpp
moldyn.c
xbsmovie.c
init_gpu.c
write_zstates.c
get_phase.c
betaxpsi1.c
symmetry.c
lbfgs.c
nlforce_par_Q.c
rmg_lbfgs.c
test_overlap.c
write_avgv.c
move_ions.c
ranv.c
print_density_z_direction.c
GetDerweight.cpp
set_pbc.c
pulay_rho.c
AssignDerweight.cpp
PartialGamma.cpp
fire.c
mg_prolong_6.c
partial_beta_fdiff.c
)
include_directories("${RMG_SOURCE_DIR}/RMG/Headers/")
include_directories("${RMG_BINARY_DIR}/RMG/Headers/")
include_directories(${MAGMA_INCLUDES})
include_directories(${MAGMA_INCLUDES}/magma)

