add_library (RMG_Common
GetPhase.cpp
EnergyCorrection.cpp
BroydenPotential.cpp
DavPreconditioner.cpp
ApplyHamiltonian.cpp
ApplyHamiltonianBlock.cpp 
Davidson.cpp
MgridSubspace.cpp
MolecularDynamics.cpp
GetAugRho.cpp
MixRho.cpp
WriteData.cpp
WriteBGW_Wfng.cpp
WriteBGW_Rhog.cpp
WriteBGW_VxcEig.cpp
WriteRestart.cpp
LcaoGetAwave.cpp
LcaoGetPsi.cpp
ReadData.cpp
OutputBandPlot.cpp
AppCirDriverBeta.cpp
AssignWeight.cpp
GetWeight.cpp
GetWeightLocal.cpp
GetNlop.cpp
ReinitIonicPotentials.cpp
transition_rmg.cpp
PotentialAcceleration.cpp
GetNewRho.cpp
Betaxpsi.cpp
Init.cpp
Main.cpp
AppNls.cpp
Kpoint.cpp
State.cpp
Quench.cpp
Relax.cpp
RmgThread.cpp
OutputEigenvalues.cpp
Scf.cpp
pack_stop_axpy.cpp
genvpsi.cpp
MgEigState.cpp
GetGamma.cpp
fastrelax.c
lbfgs_init.c
Nlforce.cpp
pack_rho_ctof.c
write_force.c
getpoi_bc.c
nlforce_par_gamma.c
app_smooth1.cpp
rand0.c
get_extrapolation_constants.c
write_header.c
#get_pdos.c
BandStructure.cpp
wvfn_residual.c
#init_img_topo.c
#mulliken.c
write_avgd.c
bsplines.c
claim_ion.c
debug_write_rho_z.c
write_pdb.c
nlforce_par_omega.c
neb_relax.c
app_smooth.cpp
xbsmovie.c
write_zstates.c
symmetry.c
lbfgs.c
nlforce_par_Q.c
rmg_lbfgs.c
test_overlap.c
write_avgv.c
move_ions.c
ranv.c
print_density_z_direction.c
set_pbc.c
pulay_rho.c
PartialGamma.cpp
fire.c
)
include_directories("${RMG_SOURCE_DIR}/RMG/Headers/")
include_directories("${RMG_BINARY_DIR}/RMG/Headers/")
include_directories(${MAGMA_INCLUDES})
include_directories(${MAGMA_INCLUDES}/magma)

