add_library (RMG_Input
read_atoms.c                                                                                                                                    
read_control.c                                                                                                                                  
read_pdb.c
)
