add_library (RMG_Spin
xclda.c                                                                                                                                         
xclda_libxc.c
xcgga.c
xcgga_libxc.c
xcgga_spin_libxc.c
get_opposite_occupancies.c
xcgga_spin.c
get_opposite_eigvals.c
xclsda_spin_libxc.c
get_rho_oppo.c
xclsda_spin.c
)
